<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et2"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="99dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:onClick="Registrar"
        android:text="@string/Registrar"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="144dp"
        android:layout_height="99dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="32dp"
        android:onClick="buscar"
        android:text="@string/Buscar"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="144dp"
        android:layout_height="99dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="59dp"
        android:onClick="modificar"
        android:text="@string/codig"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="144dp"
        android:layout_height="99dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="58dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="eliminar"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>